# calendar-scheduler

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bomp.toml  cog.toml  flake.nix
.github/actions/: tag.yaml
.github/workflows/: tag.yaml
crates/caldav-utils/: Cargo.toml
crates/caldav-utils/src/: calendar.rs  client.rs  error.rs  event.rs  format.rs  lib.rs  principal.rs  tests.rs
crates/caldav-utils/src/availability/: mod.rs
crates/caldav-utils/src/caldav/: calendar.rs  client.rs  event.rs  mod.rs  principal.rs  util.rs
crates/cli/: Cargo.toml
crates/cli/src/: caldav.rs  commands.rs  lib.rs  main.rs
crates/cli/src/caldav/: calendar.rs  client.rs  principal.rs  util.rs
crates/scheduling-api/: Cargo.toml
crates/scheduling-api/src/: error.rs  lib.rs  main.rs  state.rs  tests.rs
flake-parts/: cargo.nix  pre-commit.nix  rust-toolchain.nix
