[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.6.4"

[workspace.dependencies]
axum = { version = "0.6.1" }
reqwest = { version = "0.11.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"

[profile.release]
# opt-level = 2 # fast and small wasm

