[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.0"

[workspace.dependencies]
serde_json = "1.0.87"
tracing = "0.1.37"

[workspace.dependencies.axum]
version = "0.6.1"
features = []

[workspace.dependencies.reqwest]
version = "0.11.12"
features = ["rustls-tls", "json"]
default-features = false

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[profile.release.package]
