[package]
name = "caldav-utils"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
minidom = "0.15.0"
# clap = { version = "4.0.19", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["rustls-tls", "json"] }
# serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"
