[package]
name = "caldav-utils"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "functions for interacting with CalDAV servers"
homepage = "https://github.com/justinrubek/calendar-scheduler"
repository = "https://github.com/justinrubek/calendar-scheduler"

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
http = "0.2.8"
icalendar = "0.15.1"
minidom = "0.15.0"
# clap = { version = "4.0.19", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["rustls-tls", "json"] }
rrule = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.1.0", features = ["chrono"] }
serde_json = "1.0.87"
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"
