[package]
name = "caldav-utils"
version = { workspace = true }
edition = "2021"
license = "MIT"
description = "functions for interacting with CalDAV servers"
homepage = "https://github.com/justinrubek/calendar-scheduler"
repository = "https://github.com/justinrubek/calendar-scheduler"

[dependencies]
anyhow = "1"
chrono = "0.4.23"
chrono-tz = "0.8.1"
http = "0.2.8"
icalendar = "0.15.1"
ksuid = "0.2.0"
minidom = "0.15.0"
# clap = { version = "4.0.19", features = ["derive"] }
reqwest = { workspace = true }
rrule = "0.10.0"
serde = { workspace = true }
serde_with = { version = "2.1.0", features = ["chrono"] }
serde_json = { workspace = true }
thiserror = "1.0.38"
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.3.1"
