[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
axum = "0.6.1"
caldav-utils = { path = "../caldav-utils" }
chrono = "0.4.23"
clap = { version = "4.0.19", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["rustls-tls", "json"] }
scheduling-api = { path = "../scheduling-api" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
