[package]
name = "cli"
version = { workspace = true }
edition = "2021"
authors = ["Justin Rubek"]

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
caldav-utils = { path = "../caldav-utils" }
chrono = "0.4.23"
clap = { version = "4.0.19", features = ["derive"] }
reqwest = { workspace = true }
scheduling-api = { path = "../scheduling-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
