[package]
name = "scheduling-api"
version = "0.2.2"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["macros"] }
caldav-utils = { path = "../caldav-utils" }
# clap = { version = "4.0.19", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.1.0", features = ["chrono"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs"] }
