[package]
name = "scheduling-api"
version = { workspace = true }
edition = "2021"
license = "MIT"
description = "axum API for scheduling using a caldav server"
homepage = "https://github.com/justinrubek/calendar-scheduler"
repository = "https://github.com/justinrubek/calendar-scheduler"

[dependencies]
axum = { workspace = true, features = ["macros"] }
caldav-utils = { path = "../caldav-utils" }
# clap = { version = "4.0.19", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
icalendar = "0.15.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.38"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs"] }
tracing = { workspace = true }
